[tool.poetry]
name = "recipe-search"
version = "0.1.0"
description = "A project to search through recipes with semantic search"
authors = ["Mats E. Mollestad <mats.mollestad@cheffelo.com>"]
packages = [{include = "recipe_search"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'
