[tool.poetry]
name = "recipe-tagging"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Agathe Raaum <agathe.raaum@cheffelo.com>"]
packages = [{include = "recipe_tagging"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.1.0"
databricks-env = {path = "../../packages/databricks-env", develop = true}
databricks-connect = "15.4.3"
databricks-feature-engineering = "^0.8.0"
constants = {path = "../../packages/constants", develop = true}
slack-connector = {path = "../../packages/slack-connector", develop = true}

pyright = "^1.1.394"
streamlit = "^1.42.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
bayesian-optimization = "^2.0.3"
data-contracts = {path = "../../packages/data-contracts", develop = true}
nltk = "^3.9.1"
fuzzywuzzy = "^0.18.0"
pandera = "^0.23.1"
[tool.poetry.group.cli.dependencies]
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}

[tool.poetry.group.databricks.dependencies]
databricks-env = {path = "../../packages/databricks-env", develop = true}

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}

ipykernel = "^6.29.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'

[tool.pyright]
exclude = [
    "**/jobs/**.py",
    ".venv",
    "streamlit_app/**",
]

[tool.ruff]
exclude = [
    "**/jobs/**.py",
    ".venv",
    "streamlit_app/**",
    "**/*.ipynb",
]
