[tool.poetry]
name = "review-screener"
version = "0.1.0"
description = "A Python project by Cheffelo."
authors = ["Agathe Raaum <agathe.raaum@cheffelo.com>"]
packages = [{include = "review_screener"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.1.0"
pydantic-argparser = {path = "../../packages/pydantic-argparser", develop = true}
key-vault = {path = "../../packages/key-vault", develop = true}
catalog-connector = {path = "../../packages/catalog-connector", develop = true}
model-registry = {path = "../../packages/model-registry", develop = true}
openai = "^1.82.0"
scikit-learn = "^1.6.1"
databricks-env = {path = "../../packages/databricks-env", develop = true}
slack-connector = {path = "../../packages/slack-connector", develop = true}

[tool.poetry.group.databricks.dependencies]
nest_asyncio = "1.6.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
ruff = "*"
chef = {path = "../../packages/chef", develop = true}
pyright = "*"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chef = 'chef.cli:cli'


[tool.pyright]
exclude = [
    "**/jobs/**.py",
    ".venv",
]
